Add light/dark theme support

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
+:root {
+    color-scheme: light dark;
+}
+
 body {
 	padding-top: 50px;
 	padding-bottom: 50px;
+	color: light-dark(#000000, white);
+    background-color: light-dark(#FFFFFF, #000000);
 }
